Achivements, gespeichert und fast tägliche challanges gemacht

--- a/BeBetterApp/Kalorienzähler.xaml
+++ b/BeBetterApp/Kalorienzähler.xaml
@@ -6,9 +6,41 @@
         WindowStyle="none"
         WindowState="Maximized">
 
+    <Window.Resources>
+        <Style x:Key="roundMenuButton" TargetType="Button">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="28"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Padding" Value="20,10"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}"
+                      CornerRadius="20"
+                      Padding="{TemplateBinding Padding}">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="#33FFFFFF"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#22FFFFFF"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Margin" Value="15"/>
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20*"/>
+            <RowDefinition Height="10*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -17,8 +49,27 @@
                     XAxes="{Binding XAxes}"
                     YAxes="{Binding YAxes}" />
 
+        <Button Grid.Row="4"
+      Content="Zurück"
+      HorizontalAlignment="Left"
+      VerticalAlignment="Bottom"
+      Margin="10"
+      Width="200"
+      Height="60"
+      FontSize="20"
+      Click="Button_zurück_Click"
+      Style="{StaticResource roundMenuButton}"/>
 
-        <Button x:Name="Button_zurück" Content="zurück" HorizontalAlignment="Left" Grid.Row="1" Background="#FF1B1446" Click="Button_zurück_Click" ></Button>
-        <Button x:Name="Button_Tagadden" Content="zurück" HorizontalAlignment="Right" Grid.Row="1" Background="#FF1B1446" Click="Button_Tagadden_Click" ></Button>
+        <Button Grid.Row="4"
+      Content="kcal hinz."
+      HorizontalAlignment="Right"
+      VerticalAlignment="Bottom"
+      Margin="10"
+      Width="200"
+      Height="60"
+      FontSize="20"
+      Click="Button_Tagadden_Click"
+      Style="{StaticResource roundMenuButton}"/>
+       
     </Grid>
 </Window>
