--- a/BeBetterApp/AufrufenFitnessplan.xaml
+++ b/BeBetterApp/AufrufenFitnessplan.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="BeBetterApp.Kaloriendazuzählen"
+﻿<Window x:Class="BeBetterApp.AufrufenFitnessplan"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeBetterApp"
         mc:Ignorable="d"
-        Title="Kaloriendazuzählen" Height="450" Width="800" Background ="#FF1B1446"
+        Title="AufrufenFitnessplan" Height="450" Width="800" Background ="#FF1B1446"
         WindowStyle="none"
         WindowState="Maximized">
     <Window.Resources>
@@ -20,10 +20,10 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
                         <Border Background="{TemplateBinding Background}"
-                          CornerRadius="20"
-                          Padding="{TemplateBinding Padding}">
+                        CornerRadius="20"
+                        Padding="{TemplateBinding Padding}">
                             <ContentPresenter HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"/>
+                                      VerticalAlignment="Center"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsPressed" Value="True">
@@ -46,37 +46,54 @@
 
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="4*"/>
+
+            <RowDefinition Height="10*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Rectangle Fill="#FF1F1A4E" Grid.Row="0" Width="auto" Height="auto"/>
 
+        
 
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Label Content="Kalorien:" Width="150" Height="50" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="30"/>
-            <Border Width="150" Height="50" Background="LightSlateGray" CornerRadius="20" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Grid.Column="1" Margin="10" >
-                <TextBox Background="LightSlateGray"  x:Name="textblock_kalorieeneingabe" Height="50" Width="150"  HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="White" />
-            </Border>
-           
-            <Button x:Name="Button_eingegeben" Height="50" Width="150" Click="Button_eingegeben_Click" Content="Hinzufügen" Background="#FF1B1446" Foreground="White" FontSize="25"/>
-        </StackPanel>
+        <Grid Grid.Row="1" Margin="0,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="5"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="5"/>
+            </Grid.RowDefinitions>
+
+            <TextBox Grid.Row="1"
+       x:Name="Ausgabe"
+       AcceptsReturn="True"
+       TextWrapping="Wrap"
+       Background="#FF1B1446"
+       Foreground="White"
+       FontSize="30"
+                 Margin="60,0,60,0"
+                 HorizontalAlignment="Left"
+       BorderThickness="0"
+       Padding="5"/>
+
+            <Rectangle Grid.Row="2" Fill="#FF1F1A4E"/>
+        </Grid>
 
 
 
-        <Label x:Name="Titel" Content="Kalorien hinzufügen" FontSize="50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"  FontWeight="Bold"/>
+        <Label x:Name="Titel" Content="TrainingsPlan" FontSize="50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"  FontWeight="Bold"/>
 
-        <Button Grid.Row="4"
-              Content="Zurück"
-              HorizontalAlignment="Left"
-              VerticalAlignment="Bottom"
-              Margin="10"
-              Width="200"
-              Height="60"
-              FontSize="20"
-              Click="Button_zuruck"
-              Style="{StaticResource roundMenuButton}"/>
+        <Button Grid.Row="3"
+            Content="Zurück"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Margin="10"
+            Width="200"
+            Height="60"
+            FontSize="20"
+            Click="Button_zuruck"
+            Style="{StaticResource roundMenuButton}"/>
     </Grid>
+
 </Window>
