--- a/BeBetterApp/Gespeichertselect.xaml
+++ b/BeBetterApp/Gespeichertselect.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="BeBetterApp.Kaloriendazuzählen"
+﻿<Window x:Class="BeBetterApp.Gespeichertselect"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeBetterApp"
         mc:Ignorable="d"
-        Title="Kaloriendazuzählen" Height="450" Width="800" Background ="#FF1B1446"
-        WindowStyle="none"
-        WindowState="Maximized">
+        Title="Gespeichertselect" Height="450" Width="800"         WindowStartupLocation="CenterScreen"
+Background="#FF1B1446"
+WindowStyle="none"
+WindowState="Maximized">
     <Window.Resources>
+        <!-- Style wie menuButton aus MainWindow -->
         <Style x:Key="roundMenuButton" TargetType="Button">
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="Background" Value="Transparent"/>
@@ -41,42 +43,17 @@
     </Window.Resources>
 
     <Grid>
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Fitnessplan"
+              Width="550" Height="140"
+              Style="{StaticResource roundMenuButton}"
+              Click="Button_Fittnesplan"/>
 
-
-
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <Rectangle Fill="#FF1F1A4E" Grid.Row="0" Width="auto" Height="auto"/>
-
-
-
-        <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Label Content="Kalorien:" Width="150" Height="50" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="30"/>
-            <Border Width="150" Height="50" Background="LightSlateGray" CornerRadius="20" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Grid.Column="1" Margin="10" >
-                <TextBox Background="LightSlateGray"  x:Name="textblock_kalorieeneingabe" Height="50" Width="150"  HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="White" />
-            </Border>
-           
-            <Button x:Name="Button_eingegeben" Height="50" Width="150" Click="Button_eingegeben_Click" Content="Hinzufügen" Background="#FF1B1446" Foreground="White" FontSize="25"/>
+            <Button Content="Ernährungsplansplan"
+              Width="550" Height="140"
+              Style="{StaticResource roundMenuButton}" Click="Button_ErnährungsPlan"/>
         </StackPanel>
 
-
-
-        <Label x:Name="Titel" Content="Kalorien hinzufügen" FontSize="50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"  FontWeight="Bold"/>
-
-        <Button Grid.Row="4"
-              Content="Zurück"
-              HorizontalAlignment="Left"
-              VerticalAlignment="Bottom"
-              Margin="10"
-              Width="200"
-              Height="60"
-              FontSize="20"
-              Click="Button_zuruck"
-              Style="{StaticResource roundMenuButton}"/>
+        <Button Content="Zurück" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Width="200" Height="60" FontSize="20"  Style="{StaticResource roundMenuButton}" Click="Button_Zueruck"/>
     </Grid>
 </Window>
