--- a/BeBetterApp/MainWindow.xaml
+++ b/BeBetterApp/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
         xmlns:local="clr-namespace:BeBetterApp"
         xmlns:viewModel="clr-namespace:BeBetterApp.ViewModels"
         mc:Ignorable="d"
@@ -186,7 +187,7 @@
                         </StackPanel>
                        
                         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
-                            <Border Width="auto" Height="auto" Background="	#FF00FF" CornerRadius="20" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="30,30,10,30">
+                            <Border x:Name="Border_challange" Width="auto" Height="auto" Background="	#FF00FF" CornerRadius="20" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="30,30,10,30">
                                 <TextBlock x:Name="Textblock_challange" Text="" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="White" />
                             </Border>
                             <Button Height="auto" Width="50" Margin="0,30,0,30" Content="✓" FontSize="20" Click="Button_Click" />
@@ -197,7 +198,11 @@
                             <local:TerminListe x:Name="terminListeControl"/>
                         </Grid>
 
+
+
                         
+
+
 
 
 
