--- a/BeBetterApp/WindowTrainingsplanerstellung.xaml
+++ b/BeBetterApp/WindowTrainingsplanerstellung.xaml
@@ -40,18 +40,18 @@
             <Setter Property="Margin" Value="15"/>
         </Style>
     </Window.Resources>
-    
-    <Grid>
-        
 
-        
+    <Grid>
+
+
+
 
         <Grid.RowDefinitions>
             <RowDefinition Height="4*"/>
             <RowDefinition Height="3*"/>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/> 
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Rectangle Fill="#FF1F1A4E" Grid.Row="0" Width="auto" Height="auto"/>
@@ -64,7 +64,7 @@
                 <ColumnDefinition Width="1.5*"/>
                 <ColumnDefinition Width="1.5*"/>
                 <ColumnDefinition Width="1.5*"/>
-                
+
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0"  Content="Gewicht(kg):" HorizontalAlignment="Right" Height="50" Width="auto" Foreground="White"  FontSize="30"></Label>
@@ -81,28 +81,33 @@
     x:Name="preferänz"
     Width="150"
     Height="50"
+                FontSize="20"
                 Margin="5"
     Background="LightSlateGray"
-    Foreground="White">
+  >
 
                 <ComboBoxItem Content="abnehmen" />
                 <ComboBoxItem Content="muskelaufbau" />
 
             </ComboBox>
             <Button Grid.Column="5" Margin="5" Content="Erstellen" HorizontalAlignment="Left" Grid.Row="0"  Height="50" Width="150" Click="Button_Click" Background="#FF1B1446" Foreground="White" FontSize="30"/>
-            
+
 
         </Grid>
 
 
         <Grid Grid.Row="2" Margin="0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="719*"/>
+                <ColumnDefinition Width="81*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="5"/>
             </Grid.RowDefinitions>
 
-            <Rectangle Grid.Row="0" Fill="#FF1F1A4E"/>
+            <Rectangle Grid.Row="0" Fill="#FF1F1A4E" Grid.ColumnSpan="2"/>
 
             <TextBox Grid.Row="1"
            x:Name="Ausgabe"
@@ -111,15 +116,15 @@
            Background="#FF1B1446"
            Foreground="White"
            FontSize="30"
-                     Margin="60,0,60,0"
+                     Margin="60,0,0,5"
                      HorizontalAlignment="Left"
            BorderThickness="0"
-           Padding="5"/>
+           Padding="5" Grid.RowSpan="2"/>
 
-            <Rectangle Grid.Row="2" Fill="#FF1F1A4E"/>
+            <Rectangle Grid.Row="2" Fill="#FF1F1A4E" Grid.ColumnSpan="2"/>
         </Grid>
 
-        
+
 
         <Label x:Name="Titel" Content="TrainingsPlan erstellen" FontSize="50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"  FontWeight="Bold"/>
 
@@ -134,6 +139,6 @@
                 Click="Button_zuruck"
                 Style="{StaticResource roundMenuButton}"/>
     </Grid>
-    
-    
+
+
 </Window>
